<resources>
    <string name="app_name">Sound Board</string>
    <string name="add_sound">Add Sounds</string>
    <string name="sound">Sounds</string>
    <string name="downloads">Downloads</string>
    <string name="notifications">Notifications</string>
    <string name="all">All</string>
    <string name="please_wait">Please Wait</string>
    <string name="choose">Choose a location to search for sounds</string>
    <string name="play_sound">Play Sound</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="id">ID:</string>
    <string name="name">Name:</string>
    <string name="path">Path:</string>
    <string name="artist">Artist:</string>
    <string name="album">Album:</string>
    <string name="duration">Duration:</string>
    <string name="size">Size:</string>
    <string name="overlay">Overlay</string>
    <string name="search">Search</string>
    <string name="loop">Loop</string>
    <string name="sound_name">Sound Name</string>
    <string name="help">Help</string>
    <string name="help4">To search for a sound, tap the search button on the top to search for a sound by name.</string>
    <string name="help3">You can then play, pause, and loop sounds.</string>
    <string name="help2">If sounds are found they will show up under \'Sounds\'.</string>
    <string name="help1">Tap \'Add Sounds\' on the navigation bar to find sounds on your device.</string>
</resources>