<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.AddSoundFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_addSound_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="30dp"
                android:text="@string/choose"
                android:textAlignment="center"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button_downloads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/downloads" />

            <Button
                android:id="@+id/button_notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notifications" />

            <Button
                android:id="@+id/button_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/all" />

            <ProgressBar
                android:id="@+id/progress_bar"
                style="@android:style/Widget.Material.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:visibility="visible" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/text_addSound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>